--- a/taskbrowser/gtd-gnome.glade
+++ b/taskbrowser/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Fri Jan 23 16:15:29 2009 -->
+<!--Generated with glade3 3.4.5 on Sat Jan 24 19:42:35 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -27,6 +27,7 @@
                         <property name="label" translatable="yes">gtk-quit</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="gtk_main_quit"/>
                       </widget>
                     </child>
                   </widget>
@@ -35,7 +36,6 @@
             </child>
             <child>
               <widget class="GtkMenuItem" id="menu_edit">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">_Edit</property>
                 <property name="use_underline">True</property>
                 <child>
@@ -78,15 +78,14 @@
                       </widget>
                     </child>
                     <child>
-                      <widget class="GtkSeparatorMenuItem" id="separation">
+                      <widget class="GtkSeparatorMenuItem" id="separator1">
                         <property name="visible">True</property>
-                        <property name="use_underline">True</property>
                       </widget>
                     </child>
                     <child>
                       <widget class="GtkCheckMenuItem" id="view_sidebar">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">_Sidebar</property>
+                        <property name="label" translatable="yes">_Tags sidebar</property>
                         <property name="use_underline">True</property>
                         <signal name="toggled" handler="on_view_sidebar_toggled"/>
                       </widget>
@@ -94,7 +93,7 @@
                     <child>
                       <widget class="GtkCheckMenuItem" id="view_closed">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">_Closed Tasks</property>
+                        <property name="label" translatable="yes">_Closed tasks pane</property>
                         <property name="use_underline">True</property>
                         <signal name="toggled" handler="on_view_closed_toggled"/>
                       </widget>
@@ -102,7 +101,7 @@
                     <child>
                       <widget class="GtkCheckMenuItem" id="view_quickadd">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Quick Add</property>
+                        <property name="label" translatable="yes">_Quick add entry</property>
                         <property name="use_underline">True</property>
                         <signal name="toggled" handler="on_view_quickadd_toggled"/>
                       </widget>
@@ -122,8 +121,9 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="mark_done_mi">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Mark as done</property>
+                        <property name="label" translatable="yes">_Mark as done</property>
                         <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_mark_as_done"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="menu-item-image5">
                             <property name="visible">True</property>
@@ -135,7 +135,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="task_dismiss">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">_Dismiss</property>
+                        <property name="label" translatable="yes">D_ismiss</property>
                         <property name="use_underline">True</property>
                         <child internal-child="image">
                           <widget class="GtkImage" id="menu-item-image6">
@@ -148,7 +148,7 @@
                     <child>
                       <widget class="GtkImageMenuItem" id="delete_mi">
                         <property name="visible">True</property>
-                        <property name="label" translatable="yes">Delete</property>
+                        <property name="label" translatable="yes">_Delete</property>
                         <property name="use_underline">True</property>
                         <child internal-child="image">
                           <widget class="GtkImage" id="menu-item-image7">
@@ -176,6 +176,7 @@
                         <property name="label" translatable="yes">gtk-about</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_about_clicked"/>
                       </widget>
                     </child>
                   </widget>
@@ -204,7 +205,6 @@
             </child>
             <child>
               <widget class="GtkSeparatorToolItem" id="&lt;separateur&gt;">
-                <property name="visible">True</property>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
@@ -212,7 +212,6 @@
             </child>
             <child>
               <widget class="GtkToolButton" id="Undo">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Undo</property>
                 <property name="stock_id">gtk-undo</property>
               </widget>
@@ -222,7 +221,6 @@
             </child>
             <child>
               <widget class="GtkToolButton" id="Redo">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Redo</property>
                 <property name="stock_id">gtk-redo</property>
               </widget>
@@ -243,7 +241,7 @@
                 <property name="visible">True</property>
                 <property name="label" translatable="yes">Mark as done</property>
                 <property name="icon">task_done.png</property>
-                <signal name="clicked" handler="on_mark_as_done"/>
+                <property name="menu">TbTaskMenu</property>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
@@ -251,7 +249,6 @@
             </child>
             <child>
               <widget class="GtkToolButton" id="dismiss">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Dismiss</property>
                 <property name="icon">task_dismiss.png</property>
                 <signal name="clicked" handler="on_dismiss_task"/>
@@ -262,7 +259,6 @@
             </child>
             <child>
               <widget class="GtkToolButton" id="delete_b">
-                <property name="visible">True</property>
                 <property name="label" translatable="yes">Delete</property>
                 <property name="stock_id">gtk-delete</property>
                 <signal name="clicked" handler="on_delete_task"/>
@@ -588,6 +584,70 @@ Are you sure you to want delete this task ?</property>
         <property name="label" translatable="yes">gtk-ok</property>
         <property name="use_stock">True</property>
         <property name="response_id">0</property>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkMenu" id="TbTaskMenu">
+    <property name="visible">True</property>
+    <child>
+      <widget class="GtkImageMenuItem" id="tb_task_menu_dismiss">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">D_ismiss task</property>
+        <property name="use_underline">True</property>
+        <child internal-child="image">
+          <widget class="GtkImage" id="menu-item-image9">
+            <property name="visible">True</property>
+            <property name="pixbuf">task_dismiss.png</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkImageMenuItem" id="tb_task_menu_delete">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">_Delete task</property>
+        <property name="use_underline">True</property>
+        <child internal-child="image">
+          <widget class="GtkImage" id="menu-item-image10">
+            <property name="visible">True</property>
+            <property name="stock">gtk-delete</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkAboutDialog" id="aboutdialog1">
+    <property name="border_width">5</property>
+    <property name="title" translatable="yes">À propos de GTG!</property>
+    <property name="resizable">False</property>
+    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
+    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
+    <property name="program_name">Getting Things Gnome</property>
+    <property name="version">0.0.1</property>
+    <property name="copyright" translatable="yes">Copyrights: Lionel Dricot, Bertrand Rousseau</property>
+    <property name="comments" translatable="yes">
+Getting Things Gnome! is an organizer for the GNOME desktop environment.</property>
+    <property name="website">http://www.gtg-project.org</property>
+    <property name="website_label" translatable="yes">http://www.gtg-project.org</property>
+    <property name="license" translatable="yes">GNU licence v3</property>
+    <property name="authors">Lionel Dricot (ploum@ploum.net),
+Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
+    <property name="logo">gtg.svg</property>
+    <signal name="response" handler="on_about_close"/>
+    <child internal-child="vbox">
+      <widget class="GtkVBox" id="dialog-vbox2">
+        <property name="visible">True</property>
+        <property name="spacing">2</property>
+        <child internal-child="action_area">
+          <widget class="GtkHButtonBox" id="dialog-action_area2">
+            <property name="visible">True</property>
+            <property name="layout_style">GTK_BUTTONBOX_END</property>
+          </widget>
+          <packing>
+            <property name="expand">False</property>
+            <property name="pack_type">GTK_PACK_END</property>
+          </packing>
+        </child>
       </widget>
     </child>
   </widget>
