--- a/taskbrowser/gtd-gnome.glade
+++ b/taskbrowser/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Jan 24 19:52:23 2009 -->
+<!--Generated with glade3 3.4.5 on Sat Jan 24 22:23:07 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -127,7 +127,7 @@
                         <child internal-child="image">
                           <widget class="GtkImage" id="menu-item-image5">
                             <property name="visible">True</property>
-                            <property name="pixbuf">task_done.png</property>
+                            <property name="pixbuf">task_done_small.png</property>
                           </widget>
                         </child>
                       </widget>
@@ -137,10 +137,10 @@
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">D_ismiss</property>
                         <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_dismiss_task"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="menu-item-image6">
-                            <property name="visible">True</property>
-                            <property name="pixbuf">task_dismiss.png</property>
+                            <property name="pixbuf">task_dismiss_small.png</property>
                           </widget>
                         </child>
                       </widget>
@@ -150,10 +150,11 @@
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_Delete</property>
                         <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_delete_task"/>
                         <child internal-child="image">
                           <widget class="GtkImage" id="menu-item-image7">
                             <property name="visible">True</property>
-                            <property name="stock">gtk-delete</property>
+                            <property name="icon_name">edit-delete</property>
                           </widget>
                         </child>
                       </widget>
@@ -242,6 +243,7 @@
                 <property name="label" translatable="yes">Mark as done</property>
                 <property name="icon">task_done.png</property>
                 <property name="menu">TbTaskMenu</property>
+                <signal name="clicked" handler="on_mark_as_done"/>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
@@ -260,7 +262,7 @@
             <child>
               <widget class="GtkToolButton" id="delete_b">
                 <property name="label" translatable="yes">Delete</property>
-                <property name="stock_id">gtk-delete</property>
+                <property name="icon_name">edit-delete</property>
                 <signal name="clicked" handler="on_delete_task"/>
               </widget>
               <packing>
@@ -278,7 +280,7 @@
             <child>
               <widget class="GtkToggleToolButton" id="workview_toggle">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">Work View</property>
+                <property name="label" translatable="yes">Work view</property>
                 <property name="stock_id">gtk-index</property>
                 <signal name="toggled" handler="on_workview_toggled"/>
               </widget>
@@ -320,57 +322,98 @@
               </packing>
             </child>
             <child>
-              <widget class="GtkVPaned" id="vpaned1">
+              <widget class="GtkVBox" id="vbox2">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="position">330</property>
-                <property name="position_set">True</property>
                 <child>
-                  <widget class="GtkScrolledWindow" id="scrolledwindow4">
+                  <widget class="GtkHBox" id="quickadd_pane">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                    <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                     <child>
-                      <widget class="GtkTreeView" id="task_tview">
+                      <widget class="GtkEntry" id="quickadd_field">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="reorderable">True</property>
-                        <property name="rules_hint">True</property>
-                        <property name="enable_search">False</property>
-                        <property name="search_column">8</property>
-                        <property name="rubber_banding">True</property>
-                        <property name="enable_tree_lines">True</property>
-                        <signal name="row_activated" handler="on_edit_active_task"/>
-                        <signal name="cursor_changed" handler="on_task_tview_cursor_changed"/>
+                        <signal name="activate" handler="on_quickadd_field_activate"/>
                       </widget>
+                    </child>
+                    <child>
+                      <widget class="GtkButton" id="button1">
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                        <property name="label" translatable="yes">gtk-add</property>
+                        <property name="use_stock">True</property>
+                        <property name="response_id">0</property>
+                        <signal name="clicked" handler="on_quickadd_button_activate"/>
+                      </widget>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">False</property>
+                        <property name="position">1</property>
+                      </packing>
                     </child>
                   </widget>
                   <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="padding">2</property>
                   </packing>
                 </child>
                 <child>
-                  <widget class="GtkScrolledWindow" id="closed_pane">
-                    <property name="height_request">200</property>
+                  <widget class="GtkVPaned" id="vpaned1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
-                    <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                    <property name="position">330</property>
+                    <property name="position_set">True</property>
                     <child>
-                      <widget class="GtkTreeView" id="taskdone_tview">
+                      <widget class="GtkScrolledWindow" id="scrolledwindow4">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="rules_hint">True</property>
-                        <property name="search_column">8</property>
-                        <signal name="row_activated" handler="on_edit_done_task"/>
+                        <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <child>
+                          <widget class="GtkTreeView" id="task_tview">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="reorderable">True</property>
+                            <property name="rules_hint">True</property>
+                            <property name="enable_search">False</property>
+                            <property name="search_column">8</property>
+                            <property name="rubber_banding">True</property>
+                            <property name="enable_tree_lines">True</property>
+                            <signal name="row_activated" handler="on_edit_active_task"/>
+                            <signal name="cursor_changed" handler="on_task_tview_cursor_changed"/>
+                          </widget>
+                        </child>
                       </widget>
+                      <packing>
+                        <property name="resize">True</property>
+                        <property name="shrink">True</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <widget class="GtkScrolledWindow" id="closed_pane">
+                        <property name="height_request">200</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
+                        <child>
+                          <widget class="GtkTreeView" id="taskdone_tview">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="rules_hint">True</property>
+                            <property name="search_column">8</property>
+                            <signal name="row_activated" handler="on_edit_done_task"/>
+                          </widget>
+                        </child>
+                      </widget>
+                      <packing>
+                        <property name="resize">True</property>
+                        <property name="shrink">True</property>
+                      </packing>
                     </child>
                   </widget>
                   <packing>
-                    <property name="resize">True</property>
-                    <property name="shrink">True</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
               </widget>
@@ -385,54 +428,13 @@
           </packing>
         </child>
         <child>
-          <widget class="GtkHBox" id="quickadd_pane">
-            <property name="visible">True</property>
-            <property name="spacing">5</property>
-            <child>
-              <widget class="GtkEntry" id="quickadd_field">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="width_chars">40</property>
-                <signal name="activate" handler="on_quickadd_field_activate"/>
-              </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="padding">3</property>
-              </packing>
-            </child>
-            <child>
-              <widget class="GtkButton" id="quickadd_button">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="has_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="label" translatable="yes">Quick Task</property>
-                <property name="response_id">0</property>
-                <signal name="clicked" handler="on_quickadd_button_activate"/>
-              </widget>
-              <packing>
-                <property name="expand">False</property>
-                <property name="fill">False</property>
-                <property name="padding">13</property>
-                <property name="position">1</property>
-              </packing>
-            </child>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">False</property>
-            <property name="position">3</property>
-          </packing>
-        </child>
-        <child>
           <widget class="GtkStatusbar" id="statusbar1">
             <property name="visible">True</property>
             <property name="spacing">2</property>
           </widget>
           <packing>
             <property name="expand">False</property>
-            <property name="position">4</property>
+            <property name="position">3</property>
           </packing>
         </child>
       </widget>
@@ -594,6 +596,7 @@ Are you sure you to want delete this task ?</property>
         <property name="visible">True</property>
         <property name="label" translatable="yes">D_ismiss task</property>
         <property name="use_underline">True</property>
+        <signal name="activate" handler="on_dismiss_task"/>
         <child internal-child="image">
           <widget class="GtkImage" id="menu-item-image9">
             <property name="visible">True</property>
@@ -607,6 +610,7 @@ Are you sure you to want delete this task ?</property>
         <property name="visible">True</property>
         <property name="label" translatable="yes">_Delete task</property>
         <property name="use_underline">True</property>
+        <signal name="activate" handler="on_delete_task"/>
         <child internal-child="image">
           <widget class="GtkImage" id="menu-item-image10">
             <property name="visible">True</property>
@@ -624,15 +628,21 @@ Are you sure you to want delete this task ?</property>
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="program_name">Getting Things Gnome!</property>
     <property name="version">0.0.1</property>
-    <property name="copyright" translatable="yes">Copyrights: Lionel Dricot, Bertrand Rousseau</property>
+    <property name="copyright" translatable="yes">Copyrights© 2008, 2009 Lionel Dricot, Bertrand Rousseau</property>
     <property name="comments" translatable="yes">
 Getting Things Gnome! is an organizer for the GNOME desktop environment.</property>
     <property name="website">http://www.gtg-project.org</property>
-    <property name="website_label" translatable="yes">http://www.gtg-project.org</property>
-    <property name="license" translatable="yes">GNU licence v3</property>
+    <property name="website_label" translatable="yes">GTG website</property>
+    <property name="license" translatable="yes">Getting Things Gnome! est un logiciel libre ; vous pouvez le redistribuer et/ou le modifier selon les termes de la Licence Publique Générale GNU, telle que publiée par la Free Software Foundation ; version 3 de la licence, ou (à votre discrétion) toute version ultérieure.
+
+Getting Things Gnome! est distribué dans l'espoir qu'il sera utile, mais SANS AUCUNE GARANTIE ; sans même la garantie implicite de VALEUR MARCHANDE ou D'ADÉQUATION À UN BESOIN PARTICULIER. Pour plus de détails, voir la Licence Publique Générale GNU.
+
+Un exemplaire de la Licence Publique Générale GNU doit être fourni avec Getting Things Gnome! ; si ce n'est pas le cas, écrivez à la Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+</property>
     <property name="authors">Lionel Dricot (ploum@ploum.net),
 Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
     <property name="logo">gtg.svg</property>
+    <property name="wrap_license">True</property>
     <signal name="response" handler="on_about_close"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox2">
