--- a/taskbrowser/gtd-gnome.glade
+++ b/taskbrowser/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Jan 29 01:16:54 2009 -->
+<!--Generated with glade3 3.4.5 on Thu Jan 29 01:23:59 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -421,6 +421,7 @@
                             <property name="can_focus">True</property>
                             <property name="rules_hint">True</property>
                             <property name="search_column">8</property>
+                            <signal name="button_press_event" handler="on_closed_task_treeview_button_press_event"/>
                             <signal name="row_activated" handler="on_edit_done_task"/>
                           </widget>
                         </child>
@@ -752,6 +753,51 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
         <signal name="activate" handler="on_delete_task"/>
         <child internal-child="image">
           <widget class="GtkImage" id="menu-item-image10">
+            <property name="visible">True</property>
+            <property name="stock">gtk-delete</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+  </widget>
+  <widget class="GtkMenu" id="ClosedTaskContextMenu">
+    <property name="visible">True</property>
+    <child>
+      <widget class="GtkImageMenuItem" id="ctcm_unmark_as_done">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Unmark as done</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_mark_as_done"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="menu-item-image18">
+            <property name="visible">True</property>
+            <property name="pixbuf">task_done_small.png</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkImageMenuItem" id="ctcm_undismiss">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Undismiss</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_dismiss_task"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="menu-item-image19">
+            <property name="visible">True</property>
+            <property name="pixbuf">task_dismiss_small.png</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkImageMenuItem" id="ctcm_delete">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Delete</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_delete_task"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="menu-item-image20">
             <property name="visible">True</property>
             <property name="stock">gtk-delete</property>
           </widget>
