--- a/taskeditor/taskeditor.glade
+++ b/taskeditor/taskeditor.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Mon Feb 16 20:45:45 2009 -->
+<!--Generated with glade3 3.4.5 on Tue Feb 17 18:15:38 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="TaskEditor">
     <property name="title" translatable="yes">Task</property>
@@ -62,6 +62,19 @@
                 <property name="label" translatable="yes">Insert subtask</property>
                 <property name="stock_id">gtk-indent</property>
                 <signal name="clicked" handler="on_insert_subtask_clicked"/>
+              </widget>
+              <packing>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <widget class="GtkMenuToolButton" id="inserttag">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">Insert tag</property>
+                <property name="stock_id">gtk-bold</property>
+                <signal name="show_menu" handler="on_inserttag_show_menu"/>
+                <signal name="show_menu" handler="on_inserttag_show_menu"/>
+                <signal name="clicked" handler="on_inserttag_clicked"/>
               </widget>
               <packing>
                 <property name="homogeneous">True</property>
@@ -270,63 +283,6 @@
             <property name="expand">False</property>
             <property name="pack_type">GTK_PACK_END</property>
             <property name="position">3</property>
-          </packing>
-        </child>
-      </widget>
-    </child>
-  </widget>
-  <widget class="GtkDialog" id="confirm_delete">
-    <property name="border_width">5</property>
-    <property name="title" translatable="yes">Confirm your delete action</property>
-    <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
-    <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
-    <property name="has_separator">False</property>
-    <signal name="close" handler="on_delete_cancel"/>
-    <child internal-child="vbox">
-      <widget class="GtkVBox" id="dialog-vbox1">
-        <property name="visible">True</property>
-        <property name="spacing">2</property>
-        <child>
-          <widget class="GtkLabel" id="label1">
-            <property name="visible">True</property>
-            <property name="label" translatable="yes">Deleting a task cannot be undone. 
-Are you sure you to want delete this task ?</property>
-          </widget>
-          <packing>
-            <property name="position">1</property>
-          </packing>
-        </child>
-        <child internal-child="action_area">
-          <widget class="GtkHButtonBox" id="dialog-action_area1">
-            <property name="visible">True</property>
-            <property name="layout_style">GTK_BUTTONBOX_END</property>
-            <child>
-              <widget class="GtkButton" id="cancel">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="label" translatable="yes">Cancel</property>
-                <property name="response_id">0</property>
-                <signal name="released" handler="on_delete_cancel"/>
-              </widget>
-            </child>
-            <child>
-              <widget class="GtkButton" id="delete">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="label" translatable="yes">Delete it</property>
-                <property name="response_id">0</property>
-                <signal name="released" handler="on_delete_confirm"/>
-              </widget>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
-          </widget>
-          <packing>
-            <property name="expand">False</property>
-            <property name="pack_type">GTK_PACK_END</property>
           </packing>
         </child>
       </widget>
