--- a/taskbrowser/gtd-gnome.glade
+++ b/taskbrowser/gtd-gnome.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Thu Feb 19 11:24:50 2009 -->
+<!--Generated with glade3 3.4.5 on Sun Feb 22 20:10:14 2009 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="visible">True</property>
@@ -751,6 +751,25 @@ Bertrand Rousseau (bertrand.rousseau@gmail.com)</property>
   </widget>
   <widget class="GtkMenu" id="TaskContextMenu">
     <property name="visible">True</property>
+    <child>
+      <widget class="GtkImageMenuItem" id="tcm_add_subtask">
+        <property name="visible">True</property>
+        <property name="label" translatable="yes">Add subtask</property>
+        <property name="use_underline">True</property>
+        <signal name="activate" handler="on_add_subtask"/>
+        <child internal-child="image">
+          <widget class="GtkImage" id="menu-item-image14">
+            <property name="visible">True</property>
+            <property name="pixbuf">task_new_small.png</property>
+          </widget>
+        </child>
+      </widget>
+    </child>
+    <child>
+      <widget class="GtkSeparatorMenuItem" id="separatormenuitem2">
+        <property name="visible">True</property>
+      </widget>
+    </child>
     <child>
       <widget class="GtkImageMenuItem" id="tcm_mark_as_done">
         <property name="visible">True</property>
